# zephyr

./: .clang-format  BUILD.bazel  CMakeLists.txt  CODEOWNERS  Kconfig.zephyr  MODULE.bazel  defs.bzl  west.yml
arch/common/: rom_start_offset.ld
boards/arm/tdk_robokit1/: tdk_robokit1-common.dtsi  tdk_robokit1_defconfig
boards/native/native_sim/: BUILD.bazel
cmake/: target_toolchain.cmake
cmake/app/: boilerplate.cmake
cmake/bintools/llvm/: target.cmake
cmake/compiler/clang/: target.cmake
cmake/modules/: extensions.cmake
doc/: CMakeLists.txt  conf.py  zephyr.doxyfile.in
doc/_static/css/: custom.css
drivers/i2c/: i2c_emul.c
drivers/sensor/: CMakeLists.txt  Kconfig  default_rtio_sensor.c  sensor_shell.c  sensor_shell_v2.c
drivers/sensor/akm09918c/: akm09918c.c  akm09918c.h
drivers/sensor/chx01/: CMakeLists.txt  Kconfig  ch101.c  ch101_gpr_fw.c  ch101_gpr_sr_fw.c  ch_common.c  ch_common.h  ch_driver.c  (+1 more)
drivers/serial/: uart_nrfx_uarte.c
drivers/spi/: CMakeLists.txt  Kconfig  spi_sam.c
drivers/syscon/: CMakeLists.txt  Kconfig  syscon.c  syscon_emul.c
drivers/timer/: sys_clock_init.c
dts/common/: BUILD.bazel
dts/posix/: BUILD.bazel
include/: device.h
include/linker/: common-ram.ld  linker-defs.h
include/pm/: device.h
kernel/: CMakeLists.txt
scripts/: BUILD.bazel  requirements-base-lock.txt
scripts/dts/: BUILD.bazel
scripts/dts/python-devicetree/: BUILD.bazel
subsys/pm/: device.c  device_runtime.c
subsys/rtio/: Kconfig  rtio_executor.c  rtio_executor_common.h  rtio_executor_concurrent.c  rtio_executor_simple.c  rtio_handlers.c
(+319 files in other folders)
